# Ouroboros

./: .gitignore  .mocharc.json  Cargo.toml  README.md  build.main.js  config.toml  electron.build.mjs  electron.dev.mjs  electron.esbuild.mjs  electron.esbuild.ts  forge.config.js  forge.config.mjs  ouroboros.d.ts  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  window_test.yaml
crates/ourboros/: Cargo.toml
crates/ourboros-app/: Cargo.toml
crates/ourboros-app/src/: icon.rs  main.rs  server.rs
crates/ourboros-core/: Cargo.toml
crates/ourboros-core/migrations/: V1__initial_schema.sql
crates/ourboros-core/src/: error.rs  lib.rs
crates/ourboros-core/src/config/: mod.rs
crates/ourboros-core/src/storage/: mod.rs
crates/ourboros-entity/: Cargo.toml
crates/ourboros-entity/src/: asset.rs  asset_folder.rs  asset_tag.rs  folder.rs  lib.rs  smart_folder.rs  tag.rs
crates/ourboros-migration/: Cargo.toml
crates/ourboros-migration/src/: m20240101_000001_initial_schema.rs
crates/ourboros-server/: Cargo.toml
crates/ourboros-server/src/: lib.rs  main.rs  state.rs
crates/ourboros-server/src/http/: mod.rs
crates/ourboros-tauri/: Cargo.toml  tauri.conf.json
crates/ourboros-tauri/src/: lib.rs  main.rs
crates/ourboros/src/: lib.rs  main.rs  state.rs  web.rs
crates/ourboros/src/cli/: app.rs  mod.rs  server.rs
crates/ourboros/src/http/: mod.rs
crates/ourboros/src/tray/: icon.rs  mod.rs  server.rs
doc/: file_event.excalidraw  roadmap.md  swagger.json
docs/dev/: 01-项目概述.md  02-架构设计.md  03-资源库设计.md  04-核心功能模块.md  05-API设计.md  06-前端设计.md  07-数据库设计.md  08-技术依赖.md  09-开发阶段规划.md  10-设计决策与注意事项.md  11-打包和发布指南.md
electron/: application.ts  assetlib.ts  config.ts  env.d.ts  ipc.ts  main.ts  preferences.ts  preload.ts  tray.ts  watch.spec.ts  watch.ts
electron/napitesta/: .gitignore  index.js
electron/utils/: file.ts
migrations/: 20240801164101_ouroboros.sql
napi/: Cargo.toml
napi/src/: assets.rs  database.rs  file.rs  lib.rs  notify.rs  tree.rs
napitesta/: Cargo.toml
napitesta/src/: lib.rs
ouroboros-api/: Cargo.toml  build.rs
ouroboros-api/src/: config.rs  doc.rs  main.rs  routes.rs  state.rs
ouroboros-api/src/handler/: file.rs  folder.rs  mod.rs  resource.rs  root.rs  tag.rs
ouroboros-api/src/service/: file.rs  folder.rs  mod.rs  sync.rs
ouroboros-core/: Cargo.toml
ouroboros-core/examples/: ex.rs
ouroboros-core/src/: lib.rs  node.rs  tree.rs
ouroboros-core/src/db/: file.rs  file_tag.rs  folder.rs  mod.rs  tag.rs
ouroboros-core/src/model/: file.rs  file_tag.rs  folder.rs  mod.rs  tag.rs
ouroboros-core/src/sync/: init.rs  mod.rs
ouroboros-core/src/utils/: dir.rs  md5.rs  mod.rs
ouroboros-core/tests/: db.rs  node.rs  sync.rs  thumbnail.rs  tree.rs
ouroboros-doc/: Cargo.toml
ouroboros-doc/src/: main.rs
ouroboros-electron/: .gitignore  .mocharc.json  application.ts  build.electron.mjs  constants.ts  env.d.ts  main.ts  package.json  preferences.ts  preload.ts  tsconfig.json
ouroboros-electron/napi/: index.d.ts  index.js  index.ts
ouroboros-electron/src/: env.d.ts  main.ts  preferences.ts  preload.ts  tray.ts  watch.spec.ts
ouroboros-electron/src/utils/: file.spec.ts  file.ts
ouroboros-electron/tests/: file.spec.ts  index.ts  napi.spec.ts
ouroboros-electron/utils/: constants.ts  logger.ts
ouroboros-napi/: Cargo.toml
ouroboros-napi/src/: assets.rs  database.rs  lib.rs  tree.rs
ouroboros-wasm/: Cargo.toml
ouroboros-wasm/src/: lib.rs
ouroboros-web/: index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
ouroboros-web/src/: App.vue  index.html  main.ts  style.less  style.scss  vite-env.d.ts
ouroboros-web/src/api/: dialog.ts  file.ts  folder.ts  preferences.ts
ouroboros-web/src/components/: Dropdown.vue  FileTree.vue  FileTreeHeader.vue  FolderInfo.vue  GridImage.vue  Player.vue  Setting.vue  SmartSearch.vue  Tag.vue  TreeFile.vue  Upload.vue  Waterfall.vue
ouroboros-web/src/directive/: tooltip.ts
ouroboros-web/src/layout/: ContentPane.vue  Home.vue  LeftPane.vue  RightPane.vue
ouroboros-web/src/locales/: en-US.json  i18n.ts  zh-CN.json
ouroboros-web/src/pages/: Dashboard.vue  Init.vue  InitBrowser.vue  InitElectron.vue  Setting.vue  SmartSearch.vue  SmartSearchHeader.vue
ouroboros-web/src/router/: index.ts
ouroboros-web/src/stores/: file.ts  folder.ts  preferences.ts  settingDialog.ts
ouroboros-web/src/themes/: common.scss  common_button.scss  common_menu.scss  index.ts  one.ts  oneDark.scss  oneDark.ts  oneLight.ts  scrollbar.less  theme.ts
ouroboros-web/src/utils/: http.ts  store.ts
owl/: Cargo.toml
owl-db/: Cargo.toml
owl-db/src/: database.rs
owl-db/src/model/: folder.rs  mod.rs
owl/src/: cli.rs  config.rs  doc.rs  main.rs  router.rs  state.rs
owl/src/handler/: root.rs
script/: .prod.env  build.electron.js  build.electron.mjs  config_full.toml  dev.electron.js  dev.electron.mjs  node.plugin.mjs  plugin.node.ts  plugin.wasm.mjs  test.sh  wasm.plugin.js
scripts/: README.md  bundle-linux-quick.sh  bundle-macos.sh  bundle-windows-quick.ps1  bundle-windows.ps1
src/: App.vue  main.ts  style.less  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: HelloWorld.vue  Upload.vue
src/components/titlebar/: ContentTitleBar.vue  LeftTitleBar.vue  RightTitleBar.vue
src/layout/: Content.vue  ContentPane.vue  Home.vue  LeftPane.vue  RightPane.vue  TitleBar.vue
src/main/: a.ts  index.ts  main.ts  tray.ts  tsconfig.json
src/pages/: Init.vue
src/preload/: preload.ts
src/renderer/: index.html  vite.config.ts
src/renderer/src/: App.vue  main.ts  style.css  style.less
src/router/: index.ts
src/stores/: preferences.ts
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
web/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: main.tsx  router.tsx
web/src/components/: app-shell-page.tsx
web/src/i18n/: index.ts
web/src/layout/: app-header.tsx  app-layout.tsx  index.ts  main-panel.tsx  primary-panel.tsx  (+1 more)
(+29 files in other folders)
