[workspace]
resolver = "2"
members = [
    "crates/ourboros-core",
    "crates/ourboros-server",
    "crates/ourboros-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["gsxhnd"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
rusqlite = { version = "0.26", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
