[workspace]
resolver = "2"
members = [
    "crates/ourboros-core",
    "crates/ourboros-server",
    "crates/ourboros-entity",
    "crates/ourboros-migration",
    "crates/ourboros-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["gsxhnd"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
sea-orm = { version = "1", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-json"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls"] }
tray-icon = "0.19"
muda = "0.15"
tao = "0.31"
open = "5"
image = "0.25"
