[package]
name = "napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = [
    "napi8",
    "async",
    "tokio_rt",
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
napi-derive = "2"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio-test = { version = "0.4" }

[build-dependencies]
napi-build = "2"
