[package]
name = "ouroboros-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ouroboros-core = { path = "../ouroboros-core" }

axum = { version = "0.7" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
utoipa = { version = "4" }
walkdir = "2"

[build-dependencies]
utoipa = { version = "4" }
