[package]
name = "ouroboros-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ouroboros-core = { path = "../ouroboros-core" }

axum = { version = "0.7" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { version = "0.8" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
walkdir = { workspace = true }
