[package]
name = "ouroboros-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ouroboros-core = { path = "../ouroboros-core" }

axum = { version = "0.7", features = ["multipart"] }
clap = { version = "4", features = ["derive"] }
mime_guess = { version = "2" }
multer = { version = "3" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { version = "0.8" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
walkdir = { workspace = true }
rust-embed = { version = "8" }
