[package]
name = "ouroboros-core"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["--cfg=sqlx_macros_unstable"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4" }
md-5 = { version = "0.10" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
walkdir = { workspace = true }
