[package]
name = "ouroboros-core"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { workspace = true }
image = { workspace = true }
log = { version = "0.4" }
md-5 = { version = "0.10" }
serde = { workspace = true }
serde_json = { workspace = true }
surrealdb = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
walkdir = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
