[package]
name = "napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = [
    "napi8",
    "async",
    "tokio_rt",
] }
napi-derive = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1" }
walkdir = { workspace = true }

[dev-dependencies]
tokio-test = { version = "0.4" }

[build-dependencies]
napi-build = "2"
