[package]
name = "owl"
version = "0.1.0"
edition = "2021"

[dependencies]
# ouroboros-core = { path = "../ouroboros-core" }

axum = { version = "0.7", features = ["multipart"] }
clap = { version = "4", features = ["derive", "env"] }
mime_guess = { version = "2" }
multer = { version = "3" }
toml = { version = "0.8" }
rust-embed = { version = "8" }
utoipa = { version = "5", features = ["axum_extras"] }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
