[package]
name = "ourboros-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ourboros core library"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
