[package]
name = "ourboros-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ourboros core library"

[dependencies]
ourboros-entity = { path = "../ourboros-entity" }
ourboros-migration = { path = "../ourboros-migration" }
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
toml.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
