[package]
name = "ourboros-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ourboros desktop application"

[lib]
name = "ourboros_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ourboros-core = { path = "../ourboros-core" }
ourboros-server = { path = "../ourboros-server" }
