[package]
name = "ourboros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ourboros application (HTTP server and optional system tray)"

[lib]
name = "ourboros"
path = "src/lib.rs"

[[bin]]
name = "ourboros"
path = "src/main.rs"

[features]
default = []
app = ["tray"]
tray = ["dep:tray-icon", "dep:muda", "dep:tao", "dep:open", "dep:image"]

[dependencies]
ourboros-core = { path = "../ourboros-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
clap.workspace = true
tray-icon = { workspace = true, optional = true }
muda = { workspace = true, optional = true }
tao = { workspace = true, optional = true }
open = { workspace = true, optional = true }
image = { workspace = true, optional = true }
